# gqlx

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
examples/graphql-server/: Cargo.toml  README.md
examples/graphql-server/src/: main.rs  schema.rs
platform/desktop/: Cargo.toml  project.json  tauri.conf.json
platform/desktop/src/: main.rs
platform/web/: jest.config.ts  project.json  tsconfig.editor.json
platform/web-e2e/: project.json
platform/web/src/: index.html
platform/web/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts
platform/web/src/app/data/samples/blog/: query.ts  schema.ts
