[workspace]
resolver = "2"
members = [
    "platform/desktop",
]

[workspace.package]
version = "0.1.0"
authors = ["Nelson Dominguez"]
readme = "./README.md"
# license-file = "./LICENSE"
repository = "https://github.com/letterflow/letterflow/"
rust-version = "1.75.0"
edition = "2021"

# ----------------------------------------------------
# --- START DEPENDENCIES 
# ----------------------------------------------------
[workspace.dependencies]
serde = "1"
serde_json = "1"
thiserror = "1"
log = "0.4"

# --- TAURI
[workspace.dependencies.tauri]
version = "2.0.6"

# ----------------------------------------------------
# --- END DEPENDENCIES 
# ----------------------------------------------------


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.